--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -9,8 +9,9 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Entities\" />
-    <Folder Include="Infrastructure\Artist\" />
-    <Folder Include="Infrastructure\Playlist\" />
+    <Folder Include="Infrastructure\UserDTOs\" />
+    <Folder Include="Infrastructure\ArtistDTOs\" />
+    <Folder Include="Infrastructure\PlaylistDTOs\" />
     <Folder Include="Migrations\" />
     <Folder Include="Services\" />
   </ItemGroup>
