started work on auth

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=ProjectDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt" : {
+    "Key": "THIS_IS_A_SUPER_SECRET_KEY_CHANGE_ME",
+    "Issuer": "MyApi",
+    "Audience": "MyApiUsers",
+    "ExpireMinutes": 60
   }
 }
