--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -11,6 +11,7 @@
     <Folder Include="Entities\" />
     <Folder Include="Infrastructure\AlbumDTOs\" />
     <Folder Include="Infrastructure\AuthDTOs\" />
+    <Folder Include="Infrastructure\PlaylistSongsDTOs\" />
     <Folder Include="Infrastructure\SongDTOs\" />
     <Folder Include="Infrastructure\UserDTOs\" />
     <Folder Include="Infrastructure\ArtistDTOs\" />
